shoutcast plugin update. 	modified:   configure.ac 	modified:   shoutcast/Makefile.am 	new file:   shoutcast/bin/Makefile.am 	new file:   shoutcast/bin/streamripper 	new file:   shoutcast/locale/Makefile.am 	new file:   shoutcast/locale/de/LC_MESSAGES/Makefile.am 	new file:   shoutcast/locale/de/Makefile.am 	new file:   shoutcast/locale/it/LC_MESSAGES/Makefile.am 	new file:   shoutcast/locale/it/Makefile.am 	new file:   shoutcast/locale/ru/LC_MESSAGES/Makefile.am 	new file:   shoutcast/locale/ru/LC_MESSAGES/SHOUTcast.po 	new file:   shoutcast/locale/ru/Makefile.am 	modified:   shoutcast/po/Makefile.am 	new file:   shoutcast/po/ru.po 	modified:   shoutcast/src/Makefile.am 	new file:   shoutcast/src/favorites.user

--- a/configure.ac
+++ b/configure.ac
@@ -437,6 +437,13 @@ setpasswd/po/Makefile
 setpasswd/src/Makefile
 
 shoutcast/Makefile
+shoutcast/locale/Makefile
+shoutcast/locale/de/Makefile
+shoutcast/locale/de/LC_MESSAGES/Makefile
+shoutcast/locale/it/Makefile
+shoutcast/locale/it/LC_MESSAGES/Makefile
+shoutcast/locale/ru/Makefile
+shoutcast/locale/ru/LC_MESSAGES/Makefile
 shoutcast/meta/Makefile
 shoutcast/po/Makefile
 shoutcast/src/Makefile
